--- a/day-6/Regression/2. Polynomial Regression.ipynb
+++ b/day-6/Regression/2. Polynomial Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "c581cbe1-5ac2-4de2-83bc-eac46985e0c0",
    "metadata": {},
    "outputs": [],
@@ -17,18 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "b78460b7-5831-4de0-940f-ce0a3ed176d9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Hypothetically loading a dataset\n",
-    "data = pd.read_csv('sustainability_data.csv')"
+    "data = pd.read_csv('D:\\PYTHON\\Edunet2.0\\day-6\\sustainability_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "5c803265-be06-484a-b65c-972e497d5e44",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "386c5307-4c2e-45fc-a9f9-60f12b63c81f",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "c500408d-5f61-47d2-b13b-b743776ebe21",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "8a37dc8e-5da1-4e63-a39e-7307d672f734",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "92a17eee-8af4-4703-9f3e-5a5dd6328996",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
        "       1027.78382866])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "3acfe1fd-8682-413c-9a61-f6f727656f2a",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "27a60a99-b42e-4a8e-ba17-6efa52288cf3",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "88a5338c-aadf-4a54-b9b2-e91a7e3fccf4",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
        "['polynomialRegModel.pkl']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
