--- a/day-6/decision_tree/DT#2.ipynb
+++ b/day-6/decision_tree/DT#2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3410ff50",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "# Load the dataset\n",
-    "data = pd.read_csv('green_tech_data.csv')\n",
+    "data = pd.read_csv('D:\\PYTHON\\Edunet2.0\\day-6\\green_tech_data.csv')\n",
     "# Display the first few rows of the dataset\n",
     "print(data.head())\n",
     "\n"
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "328b63d8",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "d242a186",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "90b9de66",
    "metadata": {},
    "outputs": [
