--- a/day-6/Regression/Polynomial_Reg.ipynb
+++ b/day-6/Regression/Polynomial_Reg.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"polynomial_regression_data.csv\")"
+    "data = pd.read_csv(\"D:\\PYTHON\\Edunet2.0\\day-6\\polynomial_regression_data.csv\")"
    ]
   },
   {
