--- a/day-7/naive-bayes/NB#1_with_SMOTE.ipynb
+++ b/day-7/naive-bayes/NB#1_with_SMOTE.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "3107a014",
    "metadata": {
     "vscode": {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "32c77ba8",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
        "[10000 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "74bf9742",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "array(['degraded', 'at risk', 'healthy'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "f3f9149b",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
        "[10000 rows x 6 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "57561e01",
    "metadata": {},
    "outputs": [],
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "4fb059f4",
    "metadata": {},
    "outputs": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "35563ad8",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "66964ad0",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
        "['ecosystem_health_model.pkl']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "8d62b535",
    "metadata": {},
    "outputs": [
@@ -533,7 +533,7 @@
      "output_type": "stream",
      "text": [
       "Predicted Ecosystem Health:\n",
-      "Degraded\n"
+      "At Risk\n"
      ]
     },
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "14fd5542",
    "metadata": {},
    "outputs": [
@@ -583,7 +583,8 @@
       "Requirement already satisfied: sklearn-compat<1,>=0.1 in c:\\users\\athar\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from imbalanced-learn->imblearn) (0.1.3)\n",
       "Requirement already satisfied: joblib<2,>=1.1.1 in c:\\users\\athar\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from imbalanced-learn->imblearn) (1.4.2)\n",
       "Requirement already satisfied: threadpoolctl<4,>=2.0.0 in c:\\users\\athar\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from imbalanced-learn->imblearn) (3.5.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Accuracy after SMOTE: 94.54%\n"
      ]
     },
     {
@@ -593,13 +594,6 @@
       "\n",
       "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
       "[notice] To update, run: C:\\Users\\athar\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy after SMOTE: 94.54%\n"
      ]
     },
     {
@@ -617,7 +611,7 @@
      "output_type": "stream",
      "text": [
       "Predicted Ecosystem Health after SMOTE:\n",
-      "Degraded\n"
+      "At Risk\n"
      ]
     },
     {
@@ -634,7 +628,7 @@
        "['ecosystem_health_model_smote.pkl']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,6 +677,14 @@
     "# Save the model with SMOTE applied\n",
     "joblib.dump(gnb_resampled, 'ecosystem_health_model_smote.pkl')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e56975b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
