--- a/day-7/SVM/SVM#1.ipynb
+++ b/day-7/SVM/SVM#1.ipynb
@@ -2,16 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "37e082ce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8852459016393442\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.84      0.93      0.89        29\n",
+      "           1       0.93      0.84      0.89        32\n",
+      "\n",
+      "    accuracy                           0.89        61\n",
+      "   macro avg       0.89      0.89      0.89        61\n",
+      "weighted avg       0.89      0.89      0.89        61\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "\n",
+    "# Load data\n",
+    "data = pd.read_csv(r'D:\\PYTHON\\Edunet2.0\\day-7\\heart.csv')\n",
+    "\n",
+    "# Encode categorical columns\n",
+    "categorical_cols = ['Sex', 'ChestPain', 'RestECG', 'Slope', 'Thal', 'AHD']\n",
+    "label_encoders = {}\n",
+    "for col in categorical_cols:\n",
+    "    le = LabelEncoder()\n",
+    "    data[col] = le.fit_transform(data[col])\n",
+    "    label_encoders[col] = le\n",
+    "\n",
+    "# Features and target\n",
+    "X = data.drop('AHD', axis=1)\n",
+    "y = data['AHD']\n",
+    "\n",
+    "# Scale features\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# Train/test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Train SVM\n",
+    "svm = SVC(kernel='rbf', random_state=42)\n",
+    "svm.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict and evaluate\n",
+    "y_pred = svm.predict(X_test)\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
