--- a/day-7/SVM/SVM#1.ipynb
+++ b/day-7/SVM/SVM#1.ipynb
@@ -2,63 +2,341 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "37e082ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import pandas as pd\n",
+    "# from sklearn.model_selection import train_test_split\n",
+    "# from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "# from sklearn.svm import SVC\n",
+    "# from sklearn.metrics import classification_report, accuracy_score\n",
+    "\n",
+    "# # Load data\n",
+    "# data = pd.read_csv(r'D:\\PYTHON\\Edunet2.0\\day-7\\heart.csv')\n",
+    "\n",
+    "# # Encode categorical columns\n",
+    "# categorical_cols = ['Sex', 'ChestPain', 'RestECG', 'Slope', 'Thal', 'AHD']\n",
+    "# label_encoders = {}\n",
+    "# for col in categorical_cols:\n",
+    "#     le = LabelEncoder()\n",
+    "#     data[col] = le.fit_transform(data[col])\n",
+    "#     label_encoders[col] = le\n",
+    "\n",
+    "# # Features and target\n",
+    "# X = data.drop('AHD', axis=1)\n",
+    "# y = data['AHD']\n",
+    "\n",
+    "# # Scale features\n",
+    "# scaler = StandardScaler()\n",
+    "# X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# # Train/test split\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# # Train SVM\n",
+    "# svm = SVC(C=1.0,kernel='rbf', random_state=42)\n",
+    "# svm.fit(X_train, y_train)\n",
+    "\n",
+    "# # Predict and evaluate\n",
+    "# y_pred = svm.predict(X_test)\n",
+    "# print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+    "# print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b14c91de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Improved SVM pipeline for higher accuracy\n",
+    "# 1. Encode all categorical columns (including AHD)\n",
+    "# 2. Scale features\n",
+    "# 3. Use GridSearchCV for hyperparameter tuning\n",
+    "# 4. Stratified train/test split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "6b1d7a53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn import svm\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0b1da2c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>ChestPain</th>\n",
+       "      <th>RestBP</th>\n",
+       "      <th>Chol</th>\n",
+       "      <th>Fbs</th>\n",
+       "      <th>RestECG</th>\n",
+       "      <th>MaxHR</th>\n",
+       "      <th>ExAng</th>\n",
+       "      <th>Oldpeak</th>\n",
+       "      <th>Slope</th>\n",
+       "      <th>Ca</th>\n",
+       "      <th>Thal</th>\n",
+       "      <th>AHD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>63</td>\n",
+       "      <td>1</td>\n",
+       "      <td>typical</td>\n",
+       "      <td>145</td>\n",
+       "      <td>233</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>150</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>fixed</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>asymptomatic</td>\n",
+       "      <td>160</td>\n",
+       "      <td>286</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>108</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>asymptomatic</td>\n",
+       "      <td>120</td>\n",
+       "      <td>229</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>129</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>reversable</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>nonanginal</td>\n",
+       "      <td>130</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>187</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nontypical</td>\n",
+       "      <td>130</td>\n",
+       "      <td>204</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>172</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age  Sex     ChestPain  RestBP  Chol  Fbs  RestECG  MaxHR  ExAng  Oldpeak  \\\n",
+       "0   63    1       typical     145   233    1        2    150      0      2.3   \n",
+       "1   67    1  asymptomatic     160   286    0        2    108      1      1.5   \n",
+       "2   67    1  asymptomatic     120   229    0        2    129      1      2.6   \n",
+       "3   37    1    nonanginal     130   250    0        0    187      0      3.5   \n",
+       "4   41    0    nontypical     130   204    0        2    172      0      1.4   \n",
+       "\n",
+       "   Slope  Ca        Thal  AHD  \n",
+       "0      3   0       fixed   No  \n",
+       "1      2   3      normal  Yes  \n",
+       "2      2   2  reversable  Yes  \n",
+       "3      3   0      normal   No  \n",
+       "4      1   0      normal   No  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(r'D:\\PYTHON\\Edunet2.0\\day-7\\heart.csv')\n",
+    "df = df.copy()\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "ee18b54a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encode categorical columns\n",
+    "categorical_cols = ['Sex', 'ChestPain', 'RestECG', 'Slope', 'Thal', 'AHD']\n",
+    "label_encoders = {}\n",
+    "for col in categorical_cols:\n",
+    "    le = LabelEncoder()\n",
+    "    df[col] = le.fit_transform(df[col])\n",
+    "    label_encoders[col] = le"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a91bc62f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Features and target\n",
+    "X = df.drop('AHD', axis=1)\n",
+    "y = df['AHD']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "7fcc659b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scale features\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# Stratified train/test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X_scaled, y, test_size=0.2, random_state=42, stratify=y\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0bbbcfd5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8852459016393442\n",
+      "Best parameters: {'C': 1, 'gamma': 0.01, 'kernel': 'rbf'}\n",
+      "Best cross-validation accuracy: 0.8222789115646257\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Hyperparameter tuning using GridSearchCV\n",
+    "param_grid = {\n",
+    "    'C': [0.1, 1, 10, 100],\n",
+    "    'gamma': ['scale', 0.01, 0.1, 1, 10],\n",
+    "    'kernel': ['rbf', 'linear', 'poly']\n",
+    "}\n",
+    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "grid = GridSearchCV(svm.SVC(), param_grid, refit=True, cv=cv, n_jobs=-1, scoring='accuracy')\n",
+    "grid.fit(X_train, y_train)\n",
+    "print(\"Best parameters:\", grid.best_params_)\n",
+    "print(\"Best cross-validation accuracy:\", grid.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "49bbc160",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.8688524590163934\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.84      0.93      0.89        29\n",
-      "           1       0.93      0.84      0.89        32\n",
+      "           0       0.90      0.85      0.88        33\n",
+      "           1       0.83      0.89      0.86        28\n",
       "\n",
-      "    accuracy                           0.89        61\n",
-      "   macro avg       0.89      0.89      0.89        61\n",
-      "weighted avg       0.89      0.89      0.89        61\n",
+      "    accuracy                           0.87        61\n",
+      "   macro avg       0.87      0.87      0.87        61\n",
+      "weighted avg       0.87      0.87      0.87        61\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import classification_report, accuracy_score\n",
-    "\n",
-    "# Load data\n",
-    "data = pd.read_csv(r'D:\\PYTHON\\Edunet2.0\\day-7\\heart.csv')\n",
-    "\n",
-    "# Encode categorical columns\n",
-    "categorical_cols = ['Sex', 'ChestPain', 'RestECG', 'Slope', 'Thal', 'AHD']\n",
-    "label_encoders = {}\n",
-    "for col in categorical_cols:\n",
-    "    le = LabelEncoder()\n",
-    "    data[col] = le.fit_transform(data[col])\n",
-    "    label_encoders[col] = le\n",
-    "\n",
-    "# Features and target\n",
-    "X = data.drop('AHD', axis=1)\n",
-    "y = data['AHD']\n",
-    "\n",
-    "# Scale features\n",
-    "scaler = StandardScaler()\n",
-    "X_scaled = scaler.fit_transform(X)\n",
-    "\n",
-    "# Train/test split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Train SVM\n",
-    "svm = SVC(kernel='rbf', random_state=42)\n",
-    "svm.fit(X_train, y_train)\n",
-    "\n",
-    "# Predict and evaluate\n",
-    "y_pred = svm.predict(X_test)\n",
-    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+    "# Evaluate the best model\n",
+    "best_model = grid.best_estimator_\n",
+    "y_pred = best_model.predict(X_test)\n",
+    "print(\"Test Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "print(classification_report(y_test, y_pred))"
    ]
   }
