--- a/day-9/archive.ipynb
+++ b/day-9/archive.ipynb
@@ -75,6 +75,284 @@
     "data = pd.DataFrame(data_list)\n",
     "print(data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5e43a0b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv(\"image_data.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "163744e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_path</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\cloudy\\...</td>\n",
+       "      <td>Cloudy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\cloudy\\...</td>\n",
+       "      <td>Cloudy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\cloudy\\...</td>\n",
+       "      <td>Cloudy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\cloudy\\...</td>\n",
+       "      <td>Cloudy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\cloudy\\...</td>\n",
+       "      <td>Cloudy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5626</th>\n",
+       "      <td>D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\desert\\...</td>\n",
+       "      <td>Desert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5627</th>\n",
+       "      <td>D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\desert\\...</td>\n",
+       "      <td>Desert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5628</th>\n",
+       "      <td>D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\desert\\...</td>\n",
+       "      <td>Desert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5629</th>\n",
+       "      <td>D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\desert\\...</td>\n",
+       "      <td>Desert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5630</th>\n",
+       "      <td>D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\desert\\...</td>\n",
+       "      <td>Desert</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5631 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             image_path   label\n",
+       "0     D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\cloudy\\...  Cloudy\n",
+       "1     D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\cloudy\\...  Cloudy\n",
+       "2     D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\cloudy\\...  Cloudy\n",
+       "3     D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\cloudy\\...  Cloudy\n",
+       "4     D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\cloudy\\...  Cloudy\n",
+       "...                                                 ...     ...\n",
+       "5626  D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\desert\\...  Desert\n",
+       "5627  D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\desert\\...  Desert\n",
+       "5628  D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\desert\\...  Desert\n",
+       "5629  D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\desert\\...  Desert\n",
+       "5630  D:\\PYTHON\\Edunet2.0\\day-9\\archive\\data\\desert\\...  Desert\n",
+       "\n",
+       "[5631 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('image_data.csv')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "fcc09421",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df, test_df = train_test_split(df, test_size=0.2, random_state=42, stratify=df['label'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5b90302c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_Datagen = ImageDataGenerator(\n",
+    "    rescale=1./255,\n",
+    "    rotation_range=20,\n",
+    "    width_shift_range=0.2,\n",
+    "    height_shift_range=0.2,\n",
+    "    shear_range=0.2,\n",
+    "    zoom_range=0.2,\n",
+    "    horizontal_flip=True,\n",
+    "    fill_mode='nearest'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2fb656e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 4504 validated image filenames belonging to 4 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "train_generator = train_Datagen.flow_from_dataframe(\n",
+    "    dataframe=train_df,\n",
+    "    x_col='image_path',\n",
+    "    y_col='label',\n",
+    "    target_size=(150, 150),\n",
+    "    batch_size=32,\n",
+    "    class_mode='categorical'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a167c966",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d_1 (Conv2D)           (None, 148, 148, 32)      896       \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPoolin  (None, 74, 74, 32)        0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " conv2d_2 (Conv2D)           (None, 72, 72, 64)        18496     \n",
+      "                                                                 \n",
+      " max_pooling2d_2 (MaxPoolin  (None, 36, 36, 64)        0         \n",
+      " g2D)                                                            \n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d_1 (Conv2D)           (None, 148, 148, 32)      896       \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPoolin  (None, 74, 74, 32)        0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " conv2d_2 (Conv2D)           (None, 72, 72, 64)        18496     \n",
+      "                                                                 \n",
+      " max_pooling2d_2 (MaxPoolin  (None, 36, 36, 64)        0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " conv2d_3 (Conv2D)           (None, 34, 34, 128)       73856     \n",
+      "                                                                 \n",
+      " max_pooling2d_3 (MaxPoolin  (None, 17, 17, 128)       0         \n",
+      "                                                                 \n",
+      " conv2d_3 (Conv2D)           (None, 34, 34, 128)       73856     \n",
+      "                                                                 \n",
+      " max_pooling2d_3 (MaxPoolin  (None, 17, 17, 128)       0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 36992)             0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 128)               4735104   \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 128)               0         \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 4)                 516       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 4828868 (18.42 MB)\n",
+      "Trainable params: 4828868 (18.42 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 36992)             0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 128)               4735104   \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 128)               0         \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 4)                 516       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 4828868 (18.42 MB)\n",
+      "Trainable params: 4828868 (18.42 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "cnnmodel  = Sequential()\n",
+    "cnnmodel.add(Conv2D(32, (3, 3), activation='relu', input_shape=(150, 150, 3)))\n",
+    "cnnmodel.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "cnnmodel.add(Conv2D(64, (3, 3), activation='relu'))\n",
+    "cnnmodel.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "cnnmodel.add(Conv2D(128, (3, 3), activation='relu'))\n",
+    "cnnmodel.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "cnnmodel.add(Flatten())\n",
+    "cnnmodel.add(Dense(128, activation='relu'))\n",
+    "cnnmodel.add(Dropout(0.5))\n",
+    "cnnmodel.add(Dense(4, activation='softmax'))\n",
+    "cnnmodel.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "cnnmodel.summary()\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
