--- a/day-9/archive.ipynb
+++ b/day-9/archive.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "682805f4",
    "metadata": {},
    "outputs": [],
@@ -17,14 +17,12 @@
     "from tensorflow.keras.layers import Dense, Flatten, Conv2D, MaxPooling2D, Dropout\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import classification_report, confusion_matrix\n",
-    "\n",
-    "\n"
+    "from sklearn.metrics import classification_report, confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "4da72af5",
    "metadata": {},
    "outputs": [
@@ -78,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "5e43a0b8",
    "metadata": {},
    "outputs": [],
@@ -88,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "163744e9",
    "metadata": {},
    "outputs": [
@@ -195,7 +193,7 @@
        "[5631 rows x 2 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "fcc09421",
    "metadata": {},
    "outputs": [],
@@ -217,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "5b90302c",
    "metadata": {},
    "outputs": [],
@@ -236,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "2fb656e9",
    "metadata": {},
    "outputs": [
@@ -262,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "a167c966",
    "metadata": {},
    "outputs": [
@@ -270,40 +268,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_1 (Conv2D)           (None, 148, 148, 32)      896       \n",
+      " conv2d (Conv2D)             (None, 148, 148, 32)      896       \n",
       "                                                                 \n",
-      " max_pooling2d_1 (MaxPoolin  (None, 74, 74, 32)        0         \n",
-      " g2D)                                                            \n",
+      " max_pooling2d (MaxPooling2  (None, 74, 74, 32)        0         \n",
+      " D)                                                              \n",
       "                                                                 \n",
-      " conv2d_2 (Conv2D)           (None, 72, 72, 64)        18496     \n",
-      "                                                                 \n",
-      " max_pooling2d_2 (MaxPoolin  (None, 36, 36, 64)        0         \n",
-      " g2D)                                                            \n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_1 (Conv2D)           (None, 148, 148, 32)      896       \n",
+      " conv2d (Conv2D)             (None, 148, 148, 32)      896       \n",
       "                                                                 \n",
-      " max_pooling2d_1 (MaxPoolin  (None, 74, 74, 32)        0         \n",
+      " max_pooling2d (MaxPooling2  (None, 74, 74, 32)        0         \n",
+      " D)                                                              \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 72, 72, 64)        18496     \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPoolin  (None, 36, 36, 64)        0         \n",
+      " g2D)                                                            \n",
+      " conv2d_1 (Conv2D)           (None, 72, 72, 64)        18496     \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPoolin  (None, 36, 36, 64)        0         \n",
       " g2D)                                                            \n",
       "                                                                 \n",
-      " conv2d_2 (Conv2D)           (None, 72, 72, 64)        18496     \n",
+      " conv2d_2 (Conv2D)           (None, 34, 34, 128)       73856     \n",
       "                                                                 \n",
-      " max_pooling2d_2 (MaxPoolin  (None, 36, 36, 64)        0         \n",
+      " max_pooling2d_2 (MaxPoolin  (None, 17, 17, 128)       0         \n",
       " g2D)                                                            \n",
       "                                                                 \n",
-      " conv2d_3 (Conv2D)           (None, 34, 34, 128)       73856     \n",
+      " conv2d_2 (Conv2D)           (None, 34, 34, 128)       73856     \n",
       "                                                                 \n",
-      " max_pooling2d_3 (MaxPoolin  (None, 17, 17, 128)       0         \n",
-      "                                                                 \n",
-      " conv2d_3 (Conv2D)           (None, 34, 34, 128)       73856     \n",
-      "                                                                 \n",
-      " max_pooling2d_3 (MaxPoolin  (None, 17, 17, 128)       0         \n",
+      " max_pooling2d_2 (MaxPoolin  (None, 17, 17, 128)       0         \n",
       " g2D)                                                            \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 36992)             0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 128)               4735104   \n",
       "                                                                 \n",
       " flatten (Flatten)           (None, 36992)             0         \n",
       "                                                                 \n",
@@ -318,11 +321,6 @@
       "Trainable params: 4828868 (18.42 MB)\n",
       "Non-trainable params: 0 (0.00 Byte)\n",
       "_________________________________________________________________\n",
-      " g2D)                                                            \n",
-      "                                                                 \n",
-      " flatten (Flatten)           (None, 36992)             0         \n",
-      "                                                                 \n",
-      " dense (Dense)               (None, 128)               4735104   \n",
       "                                                                 \n",
       " dropout (Dropout)           (None, 128)               0         \n",
       "                                                                 \n",
@@ -353,6 +351,80 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e98d3036",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "141/141 [==============================] - 130s 918ms/step - loss: 0.3296 - accuracy: 0.8577 - val_loss: 0.2672 - val_accuracy: 0.8900\n",
+      "Epoch 2/10\n",
+      "141/141 [==============================] - 130s 918ms/step - loss: 0.3296 - accuracy: 0.8577 - val_loss: 0.2672 - val_accuracy: 0.8900\n",
+      "Epoch 2/10\n",
+      "141/141 [==============================] - 120s 853ms/step - loss: 0.3378 - accuracy: 0.8521 - val_loss: 0.3000 - val_accuracy: 0.8873\n",
+      "141/141 [==============================] - 120s 853ms/step - loss: 0.3378 - accuracy: 0.8521 - val_loss: 0.3000 - val_accuracy: 0.8873\n",
+      "Epoch 3/10\n",
+      "Epoch 3/10\n",
+      "141/141 [==============================] - 98s 694ms/step - loss: 0.3132 - accuracy: 0.8661 - val_loss: 0.2490 - val_accuracy: 0.9033\n",
+      "Epoch 4/10\n",
+      "141/141 [==============================] - 98s 694ms/step - loss: 0.3132 - accuracy: 0.8661 - val_loss: 0.2490 - val_accuracy: 0.9033\n",
+      "Epoch 4/10\n",
+      "141/141 [==============================] - 125s 887ms/step - loss: 0.2869 - accuracy: 0.8801 - val_loss: 0.3083 - val_accuracy: 0.8660\n",
+      "141/141 [==============================] - 125s 887ms/step - loss: 0.2869 - accuracy: 0.8801 - val_loss: 0.3083 - val_accuracy: 0.8660\n",
+      "Epoch 5/10\n",
+      "Epoch 5/10\n",
+      "141/141 [==============================] - 103s 719ms/step - loss: 0.2903 - accuracy: 0.8777 - val_loss: 0.2503 - val_accuracy: 0.9095\n",
+      "Epoch 6/10\n",
+      "141/141 [==============================] - 103s 719ms/step - loss: 0.2903 - accuracy: 0.8777 - val_loss: 0.2503 - val_accuracy: 0.9095\n",
+      "Epoch 6/10\n",
+      "141/141 [==============================] - 116s 824ms/step - loss: 0.2756 - accuracy: 0.8843 - val_loss: 0.2340 - val_accuracy: 0.9068\n",
+      "141/141 [==============================] - 116s 824ms/step - loss: 0.2756 - accuracy: 0.8843 - val_loss: 0.2340 - val_accuracy: 0.9068\n",
+      "Epoch 7/10\n",
+      "Epoch 7/10\n",
+      "141/141 [==============================] - 167s 1s/step - loss: 0.2745 - accuracy: 0.8888 - val_loss: 0.3835 - val_accuracy: 0.8429\n",
+      "Epoch 8/10\n",
+      "141/141 [==============================] - 167s 1s/step - loss: 0.2745 - accuracy: 0.8888 - val_loss: 0.3835 - val_accuracy: 0.8429\n",
+      "Epoch 8/10\n",
+      "141/141 [==============================] - 155s 1s/step - loss: 0.2889 - accuracy: 0.8850 - val_loss: 0.3124 - val_accuracy: 0.8776\n",
+      "141/141 [==============================] - 155s 1s/step - loss: 0.2889 - accuracy: 0.8850 - val_loss: 0.3124 - val_accuracy: 0.8776\n",
+      "Epoch 9/10\n",
+      "Epoch 9/10\n",
+      "141/141 [==============================] - 169s 1s/step - loss: 0.2805 - accuracy: 0.8845 - val_loss: 0.2790 - val_accuracy: 0.8891\n",
+      "Epoch 10/10\n",
+      "141/141 [==============================] - 169s 1s/step - loss: 0.2805 - accuracy: 0.8845 - val_loss: 0.2790 - val_accuracy: 0.8891\n",
+      "Epoch 10/10\n",
+      "141/141 [==============================] - 144s 1s/step - loss: 0.2680 - accuracy: 0.8870 - val_loss: 0.2375 - val_accuracy: 0.9006\n",
+      "141/141 [==============================] - 144s 1s/step - loss: 0.2680 - accuracy: 0.8870 - val_loss: 0.2375 - val_accuracy: 0.9006\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "history = cnnmodel.fit(train_generator, epochs=10, validation_data=test_generator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e20a1a6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75b6c6fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
