--- a/day-10/CNN_final.ipynb
+++ b/day-10/CNN_final.ipynb
@@ -341,7 +341,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "277/706 [==========>...................] - ETA: 11:34 - loss: 0.4980 - accuracy: 0.7841"
+      "284/706 [===========>..................] - ETA: 11:21 - loss: 0.4957 - accuracy: 0.7853"
      ]
     }
    ],
