--- a/day-10/CNN_final.ipynb
+++ b/day-10/CNN_final.ipynb
@@ -341,7 +341,17 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "284/706 [===========>..................] - ETA: 11:21 - loss: 0.4957 - accuracy: 0.7853"
+      "706/706 [==============================] - 4857s 7s/step - loss: 0.4584 - accuracy: 0.8084 - val_loss: 0.3354 - val_accuracy: 0.8583\n",
+      "Epoch 2/10\n",
+      "706/706 [==============================] - 1071s 2s/step - loss: 0.3822 - accuracy: 0.8441 - val_loss: 0.3584 - val_accuracy: 0.8372\n",
+      "Epoch 3/10\n",
+      "706/706 [==============================] - 1340s 2s/step - loss: 0.3528 - accuracy: 0.8614 - val_loss: 0.3549 - val_accuracy: 0.8639\n",
+      "Epoch 4/10\n",
+      "706/706 [==============================] - 1121s 2s/step - loss: 0.3237 - accuracy: 0.8729 - val_loss: 0.2861 - val_accuracy: 0.8862\n",
+      "Epoch 5/10\n",
+      "706/706 [==============================] - 1149s 2s/step - loss: 0.3017 - accuracy: 0.8812 - val_loss: 0.3172 - val_accuracy: 0.8810\n",
+      "Epoch 6/10\n",
+      "135/706 [====>.........................] - ETA: 18:32 - loss: 0.2559 - accuracy: 0.9012"
      ]
     }
    ],
