--- a/day-10/RNN.ipynb
+++ b/day-10/RNN.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "861cb7ca",
    "metadata": {},
    "outputs": [
@@ -49,10 +49,10 @@
        "       153, 100, 138, 160, 148, 167, 197, 161, 145, 161, 110, 177, 157,\n",
        "       152, 140, 101, 152, 158, 188, 122, 148, 124, 158, 193, 174, 189,\n",
        "       196, 143, 164, 171, 106, 143, 136, 177, 196, 102, 164, 175, 179,\n",
-       "       194, 110, 115, 197, 120])"
+       "       194, 110, 115, 197, 120], dtype=int32)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "4a88f221",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "54e0a99f",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "daedc291",
    "metadata": {},
    "outputs": [
@@ -105,10 +105,10 @@
        "       ...,\n",
        "       [196, 102, 164, ..., 179, 194, 110],\n",
        "       [102, 164, 175, ..., 194, 110, 115],\n",
-       "       [164, 175, 179, ..., 110, 115, 197]])"
+       "       [164, 175, 179, ..., 110, 115, 197]], dtype=int32)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "135c5016",
    "metadata": {},
    "outputs": [
@@ -140,10 +140,10 @@
        "       117, 113, 107, 150, 196, 148, 153, 100, 138, 160, 148, 167, 197,\n",
        "       161, 145, 161, 110, 177, 157, 152, 140, 101, 152, 158, 188, 122,\n",
        "       148, 124, 158, 193, 174, 189, 196, 143, 164, 171, 106, 143, 136,\n",
-       "       177, 196, 102, 164, 175, 179, 194, 110, 115, 197, 120])"
+       "       177, 196, 102, 164, 175, 179, 194, 110, 115, 197, 120], dtype=int32)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "01b1dea0",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
        "(193, 7, 1)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "41330897",
    "metadata": {},
    "outputs": [],
@@ -187,74 +187,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "b40347d9",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\athar\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\keras\\src\\layers\\rnn\\rnn.py:199: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(**kwargs)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/30\n",
-      "5/5 [==============================] - 11s 47ms/step - loss: 22427.3711\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 11ms/step - loss: 37633.1562\n",
       "Epoch 2/30\n",
-      "5/5 [==============================] - 0s 9ms/step - loss: 11624.5293\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - loss: 30720.5430 \n",
       "Epoch 3/30\n",
-      "5/5 [==============================] - 0s 48ms/step - loss: 3536.1685\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 10ms/step - loss: 25027.7070\n",
       "Epoch 4/30\n",
-      "5/5 [==============================] - 0s 34ms/step - loss: 1187.8176\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 9ms/step - loss: 19550.4453 \n",
       "Epoch 5/30\n",
-      "5/5 [==============================] - 0s 7ms/step - loss: 2088.6077\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 11ms/step - loss: 14158.1895\n",
       "Epoch 6/30\n",
-      "5/5 [==============================] - 0s 19ms/step - loss: 1159.4561\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 9ms/step - loss: 9326.2168  \n",
       "Epoch 7/30\n",
-      "5/5 [==============================] - 0s 19ms/step - loss: 1069.6205\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 9ms/step - loss: 4285.8237 \n",
       "Epoch 8/30\n",
-      "5/5 [==============================] - 0s 19ms/step - loss: 1156.4768\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 11ms/step - loss: 1095.6858\n",
       "Epoch 9/30\n",
-      "5/5 [==============================] - 0s 13ms/step - loss: 1009.4692\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 11ms/step - loss: 2127.0493\n",
       "Epoch 10/30\n",
-      "5/5 [==============================] - 0s 14ms/step - loss: 940.2363\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 9ms/step - loss: 1567.2974 \n",
       "Epoch 11/30\n",
-      "5/5 [==============================] - 0s 20ms/step - loss: 987.8776\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - loss: 1047.9401  \n",
       "Epoch 12/30\n",
-      "5/5 [==============================] - 0s 39ms/step - loss: 941.5296\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 10ms/step - loss: 1129.2645\n",
       "Epoch 13/30\n",
-      "5/5 [==============================] - 0s 17ms/step - loss: 953.3580\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 11ms/step - loss: 1121.5717\n",
       "Epoch 14/30\n",
-      "5/5 [==============================] - 0s 13ms/step - loss: 952.2162\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - loss: 988.3936  \n",
       "Epoch 15/30\n",
-      "5/5 [==============================] - 0s 11ms/step - loss: 929.2201\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - loss: 996.0992 \n",
       "Epoch 16/30\n",
-      "5/5 [==============================] - 0s 6ms/step - loss: 933.5400\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - loss: 925.5503 \n",
       "Epoch 17/30\n",
-      "5/5 [==============================] - 0s 30ms/step - loss: 920.1111\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - loss: 871.7426 \n",
       "Epoch 18/30\n",
-      "5/5 [==============================] - 0s 6ms/step - loss: 909.7455\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - loss: 1003.8231 \n",
       "Epoch 19/30\n",
-      "5/5 [==============================] - 0s 37ms/step - loss: 917.1351\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - loss: 982.7040  \n",
       "Epoch 20/30\n",
-      "5/5 [==============================] - 0s 34ms/step - loss: 904.9989\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - loss: 925.0706 \n",
       "Epoch 21/30\n",
-      "5/5 [==============================] - 0s 15ms/step - loss: 921.6224\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 12ms/step - loss: 913.6032\n",
       "Epoch 22/30\n",
-      "5/5 [==============================] - 0s 34ms/step - loss: 899.3864\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 9ms/step - loss: 865.0987 \n",
       "Epoch 23/30\n",
-      "5/5 [==============================] - 0s 51ms/step - loss: 904.7794\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - loss: 969.1790 \n",
       "Epoch 24/30\n",
-      "5/5 [==============================] - 0s 18ms/step - loss: 895.7024\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - loss: 910.0967 \n",
       "Epoch 25/30\n",
-      "5/5 [==============================] - 0s 11ms/step - loss: 891.1117\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 7ms/step - loss: 891.8829 \n",
       "Epoch 26/30\n",
-      "5/5 [==============================] - 0s 8ms/step - loss: 888.7295\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 10ms/step - loss: 1009.7476\n",
       "Epoch 27/30\n",
-      "5/5 [==============================] - 0s 35ms/step - loss: 886.2120\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - loss: 992.3157   \n",
       "Epoch 28/30\n",
-      "5/5 [==============================] - 0s 14ms/step - loss: 887.3066\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - loss: 896.3942 \n",
       "Epoch 29/30\n",
-      "5/5 [==============================] - 0s 26ms/step - loss: 879.9620\n",
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - loss: 961.6509 \n",
       "Epoch 30/30\n",
-      "5/5 [==============================] - 0s 25ms/step - loss: 887.4436\n"
+      "\u001b[1m5/5\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 9ms/step - loss: 886.5699 \n"
      ]
     }
    ],
@@ -271,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "0f054da2",
    "metadata": {},
    "outputs": [
@@ -279,13 +287,121 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2/2 [==============================] - 2s 18ms/step\n"
+      "\u001b[1m2/2\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 151ms/step\n"
      ]
     }
    ],
    "source": [
     "y_pred  = rnnmodel.predict(X_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1c6918e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 164ms/step\n",
+      "Predicted value: 154.00192\n"
+     ]
+    }
+   ],
+   "source": [
+    "#take new_data as an input from user of 7 days\n",
+    "new_data = np.array([101, 112, 113, 154, 167, 200, 210])  # Example input\n",
+    "new_data = new_data.reshape((1, 7, 1))  # Reshape for RNN input\n",
+    "\n",
+    "new_prediction = rnnmodel.predict(new_data.reshape(1, 7, 1))\n",
+    "print(\"Predicted value:\", new_prediction[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "27950bba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[106],\n",
+       "       [194],\n",
+       "       [166],\n",
+       "       [185],\n",
+       "       [151],\n",
+       "       [190],\n",
+       "       [183]], dtype=int32)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "874c95c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int32(102)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "247a5b0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 64ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[168.78548]], dtype=float32)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rnnmodel.predict(X_test[1].reshape(1, 7, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc761ee3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
