--- a/day-11/day-11.ipynb
+++ b/day-11/day-11.ipynb
@@ -6,7 +6,9 @@
    "id": "0f1ef2de",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "wda"
+   ]
   }
  ],
  "metadata": {
